Fixed the buttons and alignment

--- a/style_tiger.css
+++ b/style_tiger.css
@@ -83,63 +83,30 @@ img.timeline{
 div.timeline{
   background: linear-gradient(#999999, #999999) no-repeat center/2px 100%;
 }
-
-
 .collapsible {
-  display: block;
-  margin-bottom: 1rem;
+  background-color:  #353a4c;
+  color: #444;
+  cursor: pointer;
+  padding: 0px;
+  width: 45%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
 
-  input {
-    position: absolute;
-    left: -9999px;
-    &:focus ~ .collapser{
-      border-color: grey;
-    }
-  }
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .collapsible:hover {
+  background-color: #505772;
+}
 
-  .collapser {
-    cursor: pointer;
-    border: 1px transparent dotted;
-  }
-
-  .arrow {
-    float: right;
-    margin-left: 0.5em;
-    display: inline-block;
-    transform: rotate(90deg);
-    transition: transform .25s ease-out;
-  }
-
-  input:checked ~ .arrow,
-  input:checked ~ .collapser .arrow {
-    transform: rotate(270deg);
-  }
-
-  .collapsed {
-    font-size: 0;
-    margin: 0;
-    opacity: 0;
-    padding: 0;
-
-    /* fade out, then shrink */
-    transition:
-      opacity .25s,
-      margin .5s 0.25s,
-      font-size .5s 0.25s,
-      padding .5s .25s;
-  }
-
-  input:checked ~ .collapsed {
-    font-size: 16px;
-    opacity: 1;
-    height: auto;
-    padding: 5px 0;
-
-    /* grow, then fade in */
-    transition:
-      margin .25s,
-      padding .25s,
-      font-size .25s,
-      opacity .5s .25s;
-  }
+/* Style the collapsible content. Note: hidden by default */
+.content {
+  padding: 0px;
+  display: none;
+  overflow: hidden;
+  background-color: #353a4c;
+  width: 40%;
+  font-size: .2em;
+  float: right;
 }
